--- a/torchci/components/TooltipTarget.module.css
+++ b/torchci/components/TooltipTarget.module.css
@@ -28,7 +28,7 @@
   pointer-events: auto;
   position: relative;
   z-index: 1;
-  max-width: 95vw;
+  max-width: 400px;
   min-height: 3em;
   margin-bottom: 10px;
 }
@@ -42,7 +42,7 @@
   pointer-events: auto;
   position: relative;
   z-index: 1;
-  max-width: 95vw;
+  max-width: 400px;
   margin-bottom: 10px;
 }
 
