--- a/torchci/components/hud.module.css
+++ b/torchci/components/hud.module.css
@@ -3,12 +3,24 @@
   border-collapse: collapse;
   width: max-content;
   line-height: 1;
+  position: relative;
+}
+
+.hudTable::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: -120px;
+  height: 100%;
+  width: 120px;
+  background-color: var(--dropdown-bg);
+  z-index: -1;
 }
 
 /* Fix the width of these columns to avoid layout shift when loading the HUD
  table. */
 .colTime {
-  width: 12ch;
+  width: 13ch;
 }
 .colSha {
   width: 8ch;
@@ -57,6 +69,7 @@
   white-space: nowrap;
   font-family: sans-serif;
   padding-right: 4px;
+  background-color: var(--dropdown-bg);
 }
 
 .jobHeaderName {
@@ -64,6 +77,8 @@
   width: 12px;
   font-weight: 400;
   font-size: 0.8em;
+  position: relative;
+  z-index: 1;
 }
 
 .regularHeader {
@@ -152,11 +167,14 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  gap: 0.4rem;
-  margin-bottom: 1rem;
+  gap: 0.2rem;
+  margin-bottom: 0.5rem;
   width: 100%;
 }
 
 .controlsContainer > div {
   margin: 0;
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
 }
